[project]
name = "ticket-system"
version = "0.1.0"
description = ""
authors = [
    {name = "rukigaki",email = "rukigaki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "djangorestframework (>=3.17.1,<4.0.0)",
    "aiogram (>=3.29.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
